implemented get doctor's avialable slots and book appointment api
