# src/types/appointment.ts
@@ -1,0 +1,4 @@
+import { z } from "zod";
+import { createAppointmentSchema } from "../validators/appointment.validation.js";
+
+export type createAppointmentInput = z.infer<typeof createAppointmentSchema>;
