# src/validators/appointment.validation.ts
@@ -1,0 +1,14 @@
+import {z} from 'zod';
+
+export const createAppointmentSchema = z.object({
+  doctorId: z.uuid(),
+  appointmentDate: z.string().date(),
+  appointmentTime: z.enum([
+    "09:00",
+    "10:00",
+    "11:00",
+    "14:00",
+    "15:00",
+    "16:00",
+  ]),
+});
